packages/legacy-workbench/src/css/create-similarity-index.css
#query-editor .yasr .yasr_header {
    margin-bottom: 0;
}

.yasr_results {
    max-height: 345px;
    overflow-y: auto;
}

yasgui-component .CodeMirror {
    height: 330px !important;
}

.keyboard-shortcuts-dialog-wrapper {
    margin-top: -21px;
}

.create-similarity-index-btn .saving-index-loader,
.create-similarity-index-btn .save-query-btn {
    position: relative;
    bottom: -3px
}

.card .card-block .btn-link .hidden-lg-down {
    padding-left: 4px;
}

code {
    background-color: var(--gw-body-background);
}

